# opencraft

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cpp
